samples/_failures_safe/1761270193_b32d86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_873bb54a.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_873bb54a.c:147:5: error: expected expression at end of input
  147 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_873bb54a.c:147:5: error: expected declaration or statement at end of input
